--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "expo": "^36.0.0",
-    "firebase": "7.9.0",
+    "firebase": "^7.9.0",
     "lottie-react-native": "~2.6.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-drawer": "^2.5.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
@@ -21,6 +23,8 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.3.7",
+    "react-navigation-drawer": "^2.5.0",
+    "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.8.11"
   },
   "devDependencies": {
@@ -29,3 +33,6 @@
   },
   "private": true
 }
+
+
+
